[project]
name = "zhisaotong-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langchain-classic>=1.0.2",
    "langgraph>=1.0.10",
    "PyYAML>=6.0.2",
    "dashscope>=1.25.13",
    "chromadb>=1.5.4",
    "pypdf>=6.8.0"
]
